--- a/assets/css/TijaraShop.css
+++ b/assets/css/TijaraShop.css
@@ -23,3 +23,28 @@ pre{
     border: 1px solid #ccc;
     border-radius: 4px;
 }
+.card{
+    border-top: 3px solid #d2d6de;
+}
+.card.card-primary {
+    border-top-color: #3c8dbc;
+}
+.card.card-info {
+    border-top-color: #00c0ef
+}
+
+.card.card-danger {
+    border-top-color: #dd4b39
+}
+
+.card.card-warning {
+    border-top-color: #f39c12
+}
+
+.card.card-success {
+    border-top-color: #00a65a
+}
+
+.card.card-default {
+    border-top-color: #d2d6de
+}
