--- a/assets/css/TijaraShop.css
+++ b/assets/css/TijaraShop.css
@@ -1,16 +1,16 @@
-body{
+body {
     background-color: #f1f1f1;
 }
 
-.tijara-nav{
+.tijara-nav {
     margin-left: -20px;
 }
 
-.card{
-    padding: 0!important;
+.card {
+    padding: 0 !important;
 }
 
-pre{
+pre {
     display: block;
     padding: 9.5px;
     margin: 0 0 10px;
@@ -23,12 +23,15 @@ pre{
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-.card{
+
+.card {
     border-top: 3px solid #d2d6de;
 }
+
 .card.card-primary {
     border-top-color: #3c8dbc;
 }
+
 .card.card-info {
     border-top-color: #00c0ef
 }
@@ -47,4 +50,135 @@ pre{
 
 .card.card-default {
     border-top-color: #d2d6de
+}
+
+.vh-85 {
+    height: 85vh !important;
+}
+#progressbar {
+    margin-bottom: 30px;
+    overflow: hidden;
+    color: #455A64;
+    padding-left: 0px;
+    margin-top: 30px
+}
+
+#progressbar li {
+    list-style-type: none;
+    width: 16.66%;
+    float: left;
+    position: relative;
+    font-weight: 400
+}
+
+#progressbar #step1:before {
+    content: "1";
+}
+
+#progressbar #step2:before {
+    content: "2";
+}
+
+#progressbar #step3:before {
+    content: "3";
+}
+#progressbar #step4:before {
+    content: "4";
+}
+#progressbar #step5:before {
+    content: "5";
+}
+#progressbar #step6:before {
+    content: "6";
+}
+
+#progressbar li:before {
+    width: 40px;
+    height: 40px;
+    line-height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    background: #455A64;
+    border-radius: 50%;
+    margin: auto;
+    color: #fff;
+}
+
+#progressbar li:after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: #455A64;
+    position: absolute;
+    left: 0;
+    top: 21px;
+    z-index: -1
+}
+
+#progressbar li:last-child:after {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    position: absolute;
+    left: -50%
+}
+
+#progressbar li:first-child:after {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    position: absolute;
+    left: 50%
+}
+
+#progressbar li:last-child:after {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px
+}
+
+#progressbar li:first-child:after {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px
+}
+
+#progressbar li.active:before,
+#progressbar li.active:after {
+    background: red
+}
+
+.btn-circle.btn-sm {
+    width: 30px;
+    height: 30px;
+    padding: 1px 1px 1px 3px;
+    border-radius: 15px;
+    font-size: 18px;
+    text-align: center;
+}
+.btn-circle-left.btn-sm {
+    width: 30px;
+    height: 30px;
+    padding: 1px 3px 1px 1px;
+    border-radius: 15px;
+    font-size: 18px;
+    text-align: center;
+}
+.btn-circle.btn-md {
+    width: 50px;
+    height: 50px;
+    padding: 7px 10px;
+    border-radius: 25px;
+    text-align: center;
+}
+.btn-circle.btn-xl {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    border-radius: 35px;
+    font-size: 12px;
+    text-align: center;
+}
+.tooltip-inner {
+    min-width: 100px;
+    max-width: 65%;
+    text-align: left!important;
 }
