--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -4726,17 +4726,17 @@ input[type="button"].btn-block {
 
 .card {
   position: relative!important;
-  display: -ms-flexbox!important;;
-  display: flex!important;;
-  -ms-flex-direction: column!important;;
-  flex-direction: column!important;;
+  display: -ms-flexbox!important;
+  display: flex!important;
+  -ms-flex-direction: column!important;
+  flex-direction: column!important;
   min-width: 0!important;
   max-width: 100%!important;
-  word-wrap: break-word!important;;
-  background-color: #fff!important;;
-  background-clip: border-box!important;;
-  border: 1px solid rgba(0, 0, 0, 0.125)!important;;
-  border-radius: 0.25rem!important;;
+  word-wrap: break-word!important;
+  background-color: #fff!important;
+  background-clip: border-box!important;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem!important;
 }
 
 .card > hr {
