--- a/assets/css/TijaraShop.css
+++ b/assets/css/TijaraShop.css
@@ -55,6 +55,7 @@ pre {
 .vh-85 {
     height: 85vh !important;
 }
+
 #progressbar {
     margin-bottom: 30px;
     overflow: hidden;
@@ -82,12 +83,15 @@ pre {
 #progressbar #step3:before {
     content: "3";
 }
+
 #progressbar #step4:before {
     content: "4";
 }
+
 #progressbar #step5:before {
     content: "5";
 }
+
 #progressbar #step6:before {
     content: "6";
 }
@@ -154,6 +158,7 @@ pre {
     font-size: 18px;
     text-align: center;
 }
+
 .btn-circle-left.btn-sm {
     width: 30px;
     height: 30px;
@@ -162,6 +167,7 @@ pre {
     font-size: 18px;
     text-align: center;
 }
+
 .btn-circle.btn-md {
     width: 50px;
     height: 50px;
@@ -169,6 +175,7 @@ pre {
     border-radius: 25px;
     text-align: center;
 }
+
 .btn-circle.btn-xl {
     width: 70px;
     height: 70px;
@@ -177,19 +184,22 @@ pre {
     font-size: 12px;
     text-align: center;
 }
+
 .tooltip-inner {
     min-width: 100px;
     max-width: 65%;
-    text-align: left!important;
+    text-align: left !important;
 }
 
 .bg-lightblue {
     background-color: #cce9f5;
 }
-a .inner-link {
+
+.inner-link {
     color: #0098d4;
     font-weight: bold;
 }
-a .inner-link :hover {
+
+a:hover .inner-link {
     text-decoration: none;
 }
