--- a/assets/css/TijaraShop.css
+++ b/assets/css/TijaraShop.css
@@ -200,6 +200,7 @@ pre {
     font-weight: bold;
 }
 
-a:hover .inner-link {
-    text-decoration: none;
+.aic {
+    -ms-flex-align: center !important;
+    align-items: center !important;
 }
