--- a/template/base.html.twig
+++ b/template/base.html.twig
@@ -26,10 +26,12 @@
         {% block body %}{% endblock %}
 
     </div>
-</div>
 
-<script>
-    $(function () {
-        $('[data-toggle="tooltip"]').tooltip()
-    })
-</script>
+    <script>
+        $(document).ready(() => {
+            $('#toplevel_page_TijaraShop').addClass("wp-has-current-submenu")
+        })
+    </script>
+
+
+</div>
