Edit console + composerJson for unix case sentitive matching + finish creating user with our new system + FormBuilder didn't  display value if mapped = false

--- a/template/Login/index.html.twig
+++ b/template/Login/index.html.twig
@@ -32,7 +32,7 @@
                         {% for Login in Logins %}
                             <tr>
                                 <td>{{ Login.username }}</td>
-                                <td>{{ Login/isDefaultPass ? Login.password : "********" }}</td>
+                                <td>{{ Login.isDefaultPass ? Login.password : "********" }}</td>
 
                                 <td class="{{ Login.hasAdmin ? "alert-success" : "alert-danger" }}">{{ Login.hasAdmin ? "Oui" : "Non" }}</td>
                                 <td class="{{ Login.hasCompta ? "alert-success" : "alert-danger" }}">{{ Login.hasCompta ? "Oui" : "Non" }}</td>
