--- a/template/Login/edit.html.twig
+++ b/template/Login/edit.html.twig
@@ -3,27 +3,80 @@
 
 {% block body %}
     <div class="col-12">
-        <div class="card card-warning col-12">
-            <div class="card-header">
-                <ul class="nav">
-                    <li class="nav-item">
-                        Edition de Login
-                    </li>
-                </ul>
-            </div>
-            {{ form.formStart()|raw }}
-            <div class="card-body">
-                {{ form.createView(true)|raw }}
-                <div class='text-center mt-4'>
-                    {{ form.formSubmit( "Editer" )|raw }}
-                </div>
-                {{ form.formClose|raw }}
-            </div>
+        {{ form.formStart()|raw }}
 
-            <div class="card-footer">
-                    <a href="{{ makeUrl("TijaraShop/login") }}"><i class="fas fa-arrow-left"></i> Retour à
-                        la liste</a>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card col-12 card-primary">
+                    <div class="card-header">
+                        Identitée
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label for="usernameId"><h5>Nom d'utilisateur</h5></label>
+                            {{ form.display("username", false, false)|raw }}
+
+                        </div>
+                    </div>
+                </div>
+                <div class="card col-12">
+                    <div class="card-header">
+                        Mot de passe
+                    </div>
+                    <div class="card-body">
+                        <div class="alert alert-primary" role="alert">
+                            <h4 class="alert-heading">Information</h4>
+                            <hr>
+                            <p class="mb-0">
+                                Cliquer sur le bouton ci dessous entraînera la reinitialisation du mot de passe
+                            </p>
+                        </div>
+                        <div class="form-group text-center">
+                            <a href="{{ makeUrl('TijaraShop/login/reset') }}&id={{ Login.id }}" class="btn btn-danger"><i class="fa fa-trash"></i> Réinitialiser le mot de passe</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card col-12">
+                    <div class="card-header">
+                        Permissions
+                    </div>
+                    <div class="card-body">
+                        <div class="form-group">
+                            <label class="my-1 mr-2" for="inlineFormCustomSelectPref"><h5>Modèle de permission</h5>
+                            </label><br>
+                            {{ form.display("permission")|raw }}
+
+                            <br>
+                            <small><i>Choisir une valeur autre que custom ferra que les champs en dessous ne seront pas
+                                    pris en compte</i></small>
+                        </div>
+
+                        <hr>
+                        {{ form.display("hasAdmin")|raw }}
+                        {{ form.display("hasCompta")|raw }}
+                        {{ form.display("hasProductManagement")|raw }}
+                        {{ form.display("hasSupplierManagement")|raw }}
+                        {{ form.display("hasStock")|raw }}
+                        {{ form.display("hasCaisse")|raw }}
+
+                    </div>
+                </div>
             </div>
         </div>
+
+        <div class="card col-12 card-success">
+            <div class="card-header">
+                Actions
+            </div>
+            <div class="card-body text-center">
+                {{ form.formSubmit( "Ajouter" )|raw }}
+                <a href="{{ makeUrl('TijaraShop/login') }}" class="btn btn-danger">Annuler</a>
+            </div>
+        </div>
+        {{ form.formClose|raw }}
+
     </div>
 {% endblock %}
