add search on supplier, brand, category, log + update idea.txt

--- a/template/Brand/index.html.twig
+++ b/template/Brand/index.html.twig
@@ -62,7 +62,7 @@
                 <script>
                     $(document).ready(function () {
                         $('#myTable').dataTable({
-                            "searching": false
+                            "searching": true
                         });
                     });
                 </script>
