--- a/template/Supplier/index.html.twig
+++ b/template/Supplier/index.html.twig
@@ -67,7 +67,7 @@
                 <script>
                     $(document).ready(function () {
                         $('#myTable').dataTable({
-                            "searching": false
+                            "searching": true
                         });
                     });
                 </script>
