--- a/template/categorie/index.html.twig
+++ b/template/categorie/index.html.twig
@@ -72,7 +72,7 @@
                 <script>
                     $(document).ready(function () {
                         $('#myTable').dataTable({
-                            "searching": false
+                            "searching": true
                         });
                     });
                 </script>
