--- a/template/Product/index.html.twig
+++ b/template/Product/index.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
-{% block menu %}Liste des Brands{% endblock %}
+{% block menu %}Liste des Products{% endblock %}
 {% block body %}
 <div class="col-12">
         <div class="card card-primary col-12">
             <div class="card-header">
                 <ul class="nav">
                     <li class="nav-item">
-                            Liste des Brands
+                            Liste des Products
                     </li>
                     <li class="nav-item ml-auto mr-2">
-                        <a href="{{ makeUrl('TijaraShop/brand/new') }}" class="btn btn-sm btn-success">Ajouter Brand</a>
+                        <a href="{{ makeUrl('TijaraShop/product/new') }}" class="btn btn-sm btn-success">Ajouter Product</a>
                     </li>
                 </ul>
             </div>
@@ -17,21 +17,55 @@
                 <table class="table " id="myTable">
                     <thead class="thead-dark">
                     <th>id </th>
-<th>nom </th>
-<th>position </th>
+<th>Designiation </th>
+<th>label </th>
+<th>codeBarre </th>
+<th>refArticle </th>
+<th>refFournisseur </th>
+<th>Poid </th>
+<th>Hauteur </th>
+<th>Largeur </th>
+<th>Longueur </th>
+<th>prixAchat </th>
+<th>prixVente </th>
+<th>tva </th>
+<th>stockMin </th>
+<th>descriptionCourte </th>
+<th>description </th>
+<th>version </th>
+<th>isOnWeb </th>
+<th>brand_id </th>
+<th>livraison </th>
 
                     <th>Action</th>
                     </thead>
                     <tbdody>
-                        {% for Brand in Brands %}
+                        {% for Product in Products %}
                         <tr>
-                           <td>{{ Brand.id }}</td>
-<td>{{ Brand.nom }}</td>
-<td>{{ Brand.position }}</td>
+                           <td>{{ Product.id }}</td>
+<td>{{ Product.Designiation }}</td>
+<td>{{ Product.label }}</td>
+<td>{{ Product.codeBarre }}</td>
+<td>{{ Product.refArticle }}</td>
+<td>{{ Product.refFournisseur }}</td>
+<td>{{ Product.Poid }}</td>
+<td>{{ Product.Hauteur }}</td>
+<td>{{ Product.Largeur }}</td>
+<td>{{ Product.Longueur }}</td>
+<td>{{ Product.prixAchat }}</td>
+<td>{{ Product.prixVente }}</td>
+<td>{{ Product.tva }}</td>
+<td>{{ Product.stockMin }}</td>
+<td>{{ Product.descriptionCourte }}</td>
+<td>{{ Product.description }}</td>
+<td>{{ Product.version }}</td>
+<td>{{ Product.isOnWeb }}</td>
+<td>{{ Product.brand_id }}</td>
+<td>{{ Product.livraison }}</td>
 
 
                            <td>
-                                <a href="{{ makeUrl('TijaraShop/brand/read') }}&id={{ Brand.id }}">
+                                <a href="{{ makeUrl('TijaraShop/product/read') }}&id={{ Product.id }}">
                                         <button class="btn btn-success" data-toggle="tooltip" data-placement="top"
                                                 title="Voir">
                                             <i class="fa fa-eye"></i>
@@ -39,14 +73,14 @@
                                     </a>
 
                                 <div class="float-right">
-                                    <a href="{{ makeUrl('TijaraShop/brand/edit') }}&id={{ Brand.id }}">
+                                    <a href="{{ makeUrl('TijaraShop/product/edit') }}&id={{ Product.id }}">
                                         <button class="btn btn-warning" data-toggle="tooltip" data-placement="top"
                                             title="Editer">
                                             <i class="fa fa-edit"></i>
                                         </button>
                                     </a>
 
-                                    <a href="{{ makeUrl('TijaraShop/brand/delete') }}&id={{ Brand.id }}">
+                                    <a href="{{ makeUrl('TijaraShop/product/delete') }}&id={{ Product.id }}">
                                         <button class="btn  btn-danger" data-toggle="tooltip" data-placement="top"
                                             title="Supprimer">
                                             <i class="fa fa-trash"></i>
@@ -62,7 +96,7 @@
                 <script>
                     $(document).ready(function () {
                         $('#myTable').dataTable({
-
+                            "searching": true
                         });
                     });
                 </script>
